2009-05-09  vadim  <vadim@vk.crocodile.org>

	* platform/iptables.xml.in: Unified support for different iptables
	appliances: configuration will require platform "iptables" and
	host os that corresponds to the chosen appliance. This matches
	support for Secuwall and is easier to maintain than separate
	platform-os pairs for each appliance.

2009-05-06  vadim  <vadim@vk.crocodile.org>

	* FirewallInstallerCisco.cpp (FirewallInstallerCisco::activatePolicy):
	fixed bug #2787932 "External install script is not supported for
	PIX".

	* fixed bug #2787857: "b847 crashes on Start". v3.0.5 build 847
	links with QtDBus framework as part of the future development but
	the framework file was not included in the bundle. This caused
	crash on Mac OS X.

2009-05-02  vadim  <vadim@vk.crocodile.org>

	* DiscoveryDruid.cpp (DiscoveryDruid::DiscoveryDruid): fixed bug
	#2785671 "Menu 'Import Policy' opens wizard with wrong option
	checked". The "discovery druid' dialog would open on the first
	page (where user makes a choice which discovery method to use)
	even when called via main menu "File/Import Policy" and radio
	button for the SNMP discovery was activated.

2009-04-30  Vadim Kurland  <vadim@vk.crocodile.org>

	* ObjectManipulator.cpp (ObjectManipulator::addTreePage): fixed
	bug #2783780: using QTreeWidget::sortItems() instead of
	sortByColumn to sort objects in the tree.

2009-04-29  Vadim Kurland  <vadim@vk.crocodile.org>

	* RoutingCompiler_pix.cpp (RoutingCompiler_pix::prolog): fixes bug
	#2782645: "Can't compile for FWSM platform". Routing compiler for
	PIX should accept firewall object with platform "fwsm" as well as
	"pix".

	* ObjectManipulator.cpp (ObjectManipulator::actuallyCreateObject):
	fixes bug #2783780: "Tree objects not sorted in
	3.0.4". Automatically re-sort object branch when new host or
	firewall object is created so that the new object is positioned in
	the alphabetic sorting order.

2009-04-27  vadim  <vadim@vk.crocodile.org>
